# web-security-slides

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  Makefile  docker-compose.yml  package.json  pnpm-lock.yaml  slides-ciscn.md  slides.md
.github/workflows/: deploy.yml
challenges/author/: Dockerfile  docker-compose.yml
challenges/author/blog/: 000-default.conf  Dockerfile
challenges/author/bot/: package-lock.json  package.json
challenges/ciscn_sanic/: .dockerignore  Dockerfile  README.md  pyproject.toml
challenges/ciscn_sanic/src/ciscn_sanic/: __init__.py
challenges/ciscn_sanic/static/: index.html
challenges/ezflask/: .dockerignore  Dockerfile  README.md  pyproject.toml
challenges/ezflask/src/ezflask/: __init__.py  __main__.py
challenges/fastest_delivery_service/: Dockerfile  app.js  package.json  pnpm-lock.yaml
challenges/fastest_delivery_service/controlloers/: adminController.js  authController.js  orderController.js
challenges/fastest_delivery_service/data/: dataStore.js
challenges/fastest_delivery_service/middlewares/: auth.js
challenges/fastest_delivery_service/routes/: admin.js  order.js
challenges/fastest_delivery_service/views/: address.ejs  admin.ejs  index.ejs  (+3 more)
challenges/funnylogin/: Dockerfile  app.mjs  package.json  pnpm-lock.yaml
challenges/loginplease/: Dockerfile  app.mjs  package.json
challenges/pingline/: Dockerfile  package.json  pnpm-lock.yaml
challenges/tanuki_udon/: Dockerfile
pages/: ciscn-historical-challenges.md  cross-site-scripting.md  prototype-pollution.md  xss-restructured.md
setup/: code-runners.ts
(+25 files in other folders)
