[project]
name = "ciscn_sanic"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Mix", email = "32300164+mnixry@users.noreply.github.com"},
]
dependencies = ["sanic>=24.12.0", "sanic-session>=0.8.0", "pydash<6.0.0"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
